0030118: Draw Harness - extend vcomputehlr command with HLR algo type

vcomputehlr has been extended with -algoType argument
and sets result as DBRep shape in addition to displaying AIS_Shape.